syntax = "proto3";
package com.example.dummy;

message UserExistRequest {
  int32 userId=1;
}

message UserExistResponse {
  bool user =1 ;
}

service UserExistService {
  rpc UserExist(UserExistRequest) returns (UserExistResponse);
}
